<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            app:srcCompat="?android:attr/textSelectHandleLeft" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:rotation="180"
            app:srcCompat="?android:attr/textSelectHandleLeft" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="25dp"
            android:text="@string/d"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/teal_200"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="25dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/e"
            android:textAllCaps="true"
            android:textColor="@color/teal_200"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="25dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/v"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/teal_200"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="25dp"
            android:text="@string/o"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/teal_200"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="-10dp"
        android:text="@string/agent_app"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="0"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@color/teal_200"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@color/teal_200"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/teal_200"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword|textEmailAddress"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_LogIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:iconTintMode="add" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="30dp"
        android:text="@string/log_in_with"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="165dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:srcCompat="@drawable/google" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/TVSignUpLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="15dp"
        android:text="@string/t_sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal" />





</LinearLayout>